tests/baselines/reference/parserIndexMemberDeclaration5.errors.txt
tests/cases/conformance/parser/ecmascript5/IndexMemberDeclarations/parserIndexMemberDeclaration5.ts(2,24): error TS1005: ';' expected.


==== tests/cases/conformance/parser/ecmascript5/IndexMemberDeclarations/parserIndexMemberDeclaration5.ts (1 errors) ====
    class C {
       [a: string]: number public v: number
                           ~~~~~~
!!! error TS1005: ';' expected.
    }